# chili

./: README.md
.github/: CODEOWNERS
intercomparison/: README.md
intercomparison/outputs/pacman/: evolution-pacman-earth-data.csv  evolution-pacman-earth-grid-Hhigh-Chigh-data.csv  evolution-pacman-earth-grid-Hhigh-Clow-data.csv  evolution-pacman-earth-grid-Hhigh-Cmid-data.csv  evolution-pacman-earth-grid-Hlow-Chigh-data.csv  evolution-pacman-earth-grid-Hlow-Clow-data.csv  evolution-pacman-earth-grid-Hlow-Cmid-data.csv  evolution-pacman-earth-grid-Hmid-Chigh-data.csv  evolution-pacman-earth-grid-Hmid-Clow-data.csv  evolution-pacman-earth-grid-Hmid-Cmid-data.csv  evolution-pacman-trappist1b-data.csv  evolution-pacman-trappist1e-data.csv  evolution-pacman-venus-data.csv  evolution-pacman-venus-grid-Hlow-Chigh-data.csv  evolution-pacman-venus-grid-Hlow-Clow-data.csv  evolution-pacman-venus-grid-Hlow-Cmid-data.csv  evolution-pacman-venus-grid-Hmid-Chigh-data.csv  evolution-pacman-venus-grid-Hmid-Clow-data.csv  evolution-pacman-venus-grid-Hmid-Cmid-data.csv
protocol/: README.md  models.yaml
protocol/inputs/: README.md
protocol/inputs/camo/: README.md  evolution-camo-earth-config.in  evolution-camo-trappist1b-config.in
protocol/inputs/gooey/: README.md
protocol/inputs/lavatmos/: README.md  static-model1-trappist1b-tau5-hot-config.in  static-model2-trappist1b-tau5-hot-config.in
protocol/inputs/magmatm/: README.md
protocol/outputs/: README.md
protocol/scripts/: README.md  pyproject.toml
protocol/scripts/src/: common.py  paths.py  placeholder.py
(+40 files in other folders)
