[project]
name="chili_protocol"
version="1.0"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
chili_protocol = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.0,<3.15"
yaml = ">=0.2.5,<0.3"
matplotlib = ">=3.10.6,<4"
numpy = ">=2.3.3,<3"
pyyaml = ">=6.0.3,<7"
